--- a/frontend/src/assets/css/Calendar.module.css
+++ b/frontend/src/assets/css/Calendar.module.css
@@ -289,6 +289,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    border-radius: 30px;
     align-items: center;
     color: white;
     text-align: center;
